--- a/vela-templates/addons/auto-gen/kruise.yaml
+++ b/vela-templates/addons/auto-gen/kruise.yaml
@@ -65,7 +65,18 @@ spec:
                   parameter.hostAliases != _|_ {\n\t\t\t\t\thostAliases: parameter.hostAliases\n\t\t\t\t}\n\t\t\t}\n\t\t}\n\t\tif
                   parameter.updateStrategyType != _|_ {\n\t\t\tupdateStrategy: {\n\t\t\t\ttype:
                   parameter.updateStrategyType\n\t\t\t}\n\t\t}\n\t}\n}\nparameter:
-                  {\n\t// +usage=Which image would you like to use for your service\n\t//
+                  {\n\t#ENV: {\n\t\tname:   string\n\t\tvalue?: string\n\t\tvalueFrom?:
+                  secretKeyRef: {\n\t\t\tname: string\n\t\t\tkey:  string\n\t\t}\n\t}\n
+                  \   #HealthProbe: {\n\t\t// +usage=Instructions for assessing container
+                  health by executing a command. Either this attribute or the httpGet
+                  attribute or the tcpSocket attribute MUST be specified. This attribute
+                  is mutually exclusive with both the httpGet attribute and the tcpSocket
+                  attribute.\n\t\texec?: {\n\t\t\t// +usage=A command to be executed
+                  inside the container to assess its health. Each space delimited
+                  token of the command is a separate array element. Commands exiting
+                  0 are considered to be successful probes, whilst all other exit
+                  codes are considered failures.\n\t\t\tcommand: [...string]\n\t\t}\n\t}\n\n\t//
+                  +usage=Which image would you like to use for your service\n\t//
                   +short=i\n\timage: string\n\n\t// +usage=Specify image pull policy
                   for your service\n\timagePullPolicy?: string\n\n\t// +usage=Specify
                   image pull secrets for your service\n\timagePullSecrets?: [...string]\n\n\t//
