--- a/charts/vela-core/templates/defwithtemplate/multi-env.yaml
+++ b/charts/vela-core/templates/defwithtemplate/multi-env.yaml
@@ -15,7 +15,7 @@ spec:
         	"vela/op"
         )
 
-        component: op.#ApplyEnvBindApp & {
+        app: op.#ApplyEnvBindApp & {
         	env:    parameter.env
         	policy: parameter.policy
         	app:    context.name
