Docs: canary rollout demo (rollout part only)
Feat: component definition support context.revision

--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -15,7 +15,10 @@ spec:
         	apiVersion: "apps/v1"
         	kind:       "Deployment"
         	spec: {
-        		selector: matchLabels: "app.oam.dev/component": context.name
+        		selector: matchLabels: {
+        			"app.oam.dev/component": context.name
+        			"app.oam.dev/revision":  context.revision
+        		}
 
         		template: {
         			metadata: labels: {
@@ -23,6 +26,7 @@ spec:
         				if parameter.addRevisionLabel {
         					"app.oam.dev/appRevision": context.appRevision
         				}
+        				"app.oam.dev/revision": context.revision
         			}
 
         			spec: {
