--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -613,6 +613,9 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  mode:
+                    description: WorkflowMode describes the mode of workflow
+                    type: string
                   stepIndex:
                     type: integer
                   steps:
@@ -665,6 +668,7 @@ spec:
                     type: boolean
                 required:
                 - contextBackend
+                - mode
                 - suspend
                 - terminated
                 type: object
@@ -716,8 +720,34 @@ spec:
                     externalRevision:
                       description: ExternalRevision specified the component revisionName
                       type: string
+                    inputs:
+                      description: StepInputs defines variable input of WorkflowStep
+                      items:
+                        properties:
+                          from:
+                            type: string
+                          parameterKey:
+                            type: string
+                        required:
+                        - from
+                        - parameterKey
+                        type: object
+                      type: array
                     name:
                       type: string
+                    outputs:
+                      description: StepOutputs defines output variable of WorkflowStep
+                      items:
+                        properties:
+                          exportKey:
+                            type: string
+                          name:
+                            type: string
+                        required:
+                        - exportKey
+                        - name
+                        type: object
+                      type: array
                     properties:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
@@ -1325,6 +1355,9 @@ spec:
                         description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                         type: string
                     type: object
+                  mode:
+                    description: WorkflowMode describes the mode of workflow
+                    type: string
                   stepIndex:
                     type: integer
                   steps:
@@ -1377,6 +1410,7 @@ spec:
                     type: boolean
                 required:
                 - contextBackend
+                - mode
                 - suspend
                 - terminated
                 type: object
