--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationrevisions.yaml
@@ -900,6 +900,9 @@ spec:
                                 description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                 type: string
                             type: object
+                          mode:
+                            description: WorkflowMode describes the mode of workflow
+                            type: string
                           stepIndex:
                             type: integer
                           steps:
@@ -1008,6 +1011,7 @@ spec:
                             type: boolean
                         required:
                         - contextBackend
+                        - mode
                         - suspend
                         - terminated
                         type: object
@@ -1931,8 +1935,35 @@ spec:
                               description: ExternalRevision specified the component
                                 revisionName
                               type: string
+                            inputs:
+                              description: StepInputs defines variable input of WorkflowStep
+                              items:
+                                properties:
+                                  from:
+                                    type: string
+                                  parameterKey:
+                                    type: string
+                                required:
+                                - from
+                                - parameterKey
+                                type: object
+                              type: array
                             name:
                               type: string
+                            outputs:
+                              description: StepOutputs defines output variable of
+                                WorkflowStep
+                              items:
+                                properties:
+                                  exportKey:
+                                    type: string
+                                  name:
+                                    type: string
+                                required:
+                                - exportKey
+                                - name
+                                type: object
+                              type: array
                             properties:
                               type: object
                               
@@ -2837,6 +2868,9 @@ spec:
                                 description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                                 type: string
                             type: object
+                          mode:
+                            description: WorkflowMode describes the mode of workflow
+                            type: string
                           stepIndex:
                             type: integer
                           steps:
@@ -2945,6 +2979,7 @@ spec:
                             type: boolean
                         required:
                         - contextBackend
+                        - mode
                         - suspend
                         - terminated
                         type: object
