--- a/charts/vela-core/templates/addons-default/terraform.yaml
+++ b/charts/vela-core/templates/addons-default/terraform.yaml
@@ -5,7 +5,7 @@ metadata:
     addons.oam.dev/description: Terraform Controller is a Kubernetes Controller for
       Terraform.
   name: terraform
-  namespace: vela-system
+  namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appTemplate:
     spec:
